<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:cardCornerRadius="4dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <EditText
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/text_normal"
                    android:gravity="start"
                    android:hint="@string/send_title_placeholder"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/msgText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/text_normal"
                    android:gravity="start"
                    android:hint="@string/send_content_placeholder"
                    android:inputType="textMultiLine"
                    android:padding="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="33dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:text="@string/from" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/colon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="@string/system"
                        android:textColor="?android:attr/textColorPrimary" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="33dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="start"
                            android:text="@string/to" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/colon" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                        <Button
                            android:id="@+id/addReceiverButton"
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/text_normal"
                            android:text="@string/add_receiver"
                            android:textColor="@color/relate"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/sendButton"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_coin"
                        android:text="@string/send"
                        android:textColor="@color/coin"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.drawerlayout.widget.DrawerLayout>